<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/profile_home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:onClick="goToProfileView"
        android:text="@string/profile_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/requests_home"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:onClick="filter"
        android:text="@string/requested_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/accept_home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:onClick="filter"
        android:text="@string/accept_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/borrow_home"
        app:layout_constraintStart_toEndOf="@+id/requests_home" />

    <Button
        android:id="@+id/borrow_home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:onClick="filter"
        android:text="@string/borrowed_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/my_books_home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button"
        android:onClick="getMyBooks"
        android:text="@string/myBooks_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/exchange_home"
        app:layout_constraintStart_toEndOf="@+id/profile_home"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exchange_home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_button"
        android:onClick="exchangeBook"
        android:text="@string/exchange_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/top10text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/top10"
        android:textColor="#ffffff"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_home" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="4dp"
        android:layout_toLeftOf="@id/top10text_home"
        android:background="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/top10text_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top10text_home" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:layout_toRightOf="@id/top10text_home"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/top10text_home"
        app:layout_constraintTop_toTopOf="@+id/top10text_home" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/top10list_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/search_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top10text_home" />

    <Button
        android:id="@+id/search_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button"
        android:onClick="searchForBooks"
        android:text="@string/search_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/requests_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>